fix issue with aligning after element

--- a/src/sass/components/mobile_calendar.scss
+++ b/src/sass/components/mobile_calendar.scss
@@ -32,7 +32,9 @@
                     position: absolute;
                     width: 10px;
                     top: -3%;
-                    left: 75%;
+                    left: 51%;
+                    width: 100%;
+                    height: 100%;
                 }
                 
                 &-inactive:after {
@@ -40,8 +42,9 @@
                     position: absolute;
                     width: 10px;
                     top: -3%;
-                    left: 75%;
-                    // margin-left: -5px;
+                    left: 51%;
+                    width: 100%;
+                    height: 100%;
                 }
             }
         }
